word wrap fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1070,6 +1070,9 @@ video {
 .break-words {
   overflow-wrap: break-word;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded-2xl {
   border-radius: 1rem;
 }
